# prompt-enhancer

./: .gitignore  biome.json  drizzle.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  readme.md
data/embed/: questions.json  test-set.json  training-set.json  validation-set.json
src/: utils.ts
src/db/: index.ts  schema.ts
src/embed/: generate-data.ts  index.ts
src/mastra/: index.ts
src/mastra/agents/: index.ts
src/mastra/tools/: paper-search.ts
src/mastra/workflow/: index.ts
src/paper-search/: get-papers.ts  seed.ts  test-query.ts  utils.ts
training/model_training/: train.py
