[project]
name = "model-training"
version = "0.1.0"
description = "Fine-tuning Snowflake Arctic Embed model"
requires-python = ">=3.9"

dependencies = [
    "torch>=2.2.0",
    "transformers>=4.37.0",
    "datasets>=2.16.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "wandb>=0.16.0",
    "sentence-transformers>=2.5.0",
    "accelerate>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["training/model_training"] 